--- a/Practicas/MERN Stack/package.json
+++ b/Practicas/MERN Stack/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "morgan": "^1.10.0",
     "sqlite3": "^5.1.7"
